# conways-game-of-life

./: Cargo.toml  README.md
src/: gameloop.rs  gamestate.rs  main.rs
src/states/: 101.csv  Ants.csv  BlinkerFuse.csv  Diamond.csv  GosperGliderGun.csv
