[package]
name = "conways-game-of-life"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3         # 0-3 (3 = max speed)
lto = "fat"           # "thin" is faster to compile, "fat" squeezes max perf
codegen-units = 1     # fewer units = better optimization across crates, slower compile
panic = "abort"       # smaller binary, faster
strip = true          # remove debug symbols

[dependencies]
ctrlc = "3.4.7"

[dependencies.crossterm]
version = "0.27"
features = ["event-stream"] 
